--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,9 +21,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.0.4",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+  "devDependencies": {}
 }
